# SwiftCore

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY_REVIEW.md  arch.md  build.rs  contributors.md  maintainer.md  panic.md  plan.md  std-todo.md  todo.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: バグの報告.md  機能の提案.md
.github/workflows/: ci.yml  rust.yml  security.yml
books/: README.md
builders/: apps.rs  drivers.rs  fs_image.rs  mod.rs  newlib.rs  services.rs  utils.rs
docs/: README.md  ci-cd.md  hardening-checklist.md  operations-runbook.md  secure-coding-guidelines.md  security-policy.md  template.md  threat-model.md
docs/component/: about.md  button.md  how-to-create.md  text.md
macros/src/: lib.rs
resources/components/: image.html
scripts/: autoinstall.sh  configure.sh  create_iso.sh  make_image.sh  push.sh  qemu-runner.sh  requirements.sh
shared/: fs_consts.rs
src/: app.rs  backend.rs  ffi.rs  handler.rs  kernel.rs  lib.rs  libkagami.rs  main.rs  ui.rs  x86_64-swiftcore.json
src/apps/: README.md
src/apps/Binder/: Cargo.toml
src/apps/Dock/: Cargo.toml
src/apps/Kagami/: Cargo.toml  Makefile  about.toml  build.rs  linker.ld  readme.md  spec.md  x86_64-mochios.json
src/apps/Kagami/.cargo/: config.toml
src/apps/Kagami/examples/: test_client.rs  text_client.rs
src/apps/Kagami/src/: client.rs  compositor.rs  error.rs  input.rs  ipc_proto.rs  lib.rs  main.rs  mouse.rs  protocol.rs  renderer.rs  surface.rs
src/apps/Kagami/src/backend/: custom.rs  linux_fb.rs  memory.rs  mod.rs  vga.rs
src/apps/Kagami/src/compositor/: main.rs
src/apps/Kagami/src/kagamid/: main.rs
src/apps/StdFsSmoke/: Cargo.toml  build.rs  linker.ld
src/apps/StdSmoke/: Cargo.toml  about.toml  x86_64-mochios.json
src/apps/Terminal/: about.toml
src/apps/TestClient/: Cargo.toml  about.toml  build.rs
src/apps/TextClient/: Cargo.toml  about.toml
src/apps/ViewKit/: Cargo.toml  build.rs  x86_64-mochios.json
src/apps/ViewKit/docs/component/: card.md
src/apps/ViewKit/examples/: demo.rs  stateful_ui.rs
src/apps/ViewKit/macros/: Cargo.toml
src/apps/ViewKit/resources/components/: window.html
src/apps/ViewKit/src/: app.rs  app_runner.rs  components.rs  ipc_proto.rs  lib.rs  ui.rs  vcomponent.rs  window.rs
src/apps/ViewKit/src/pipeline/: display_list.rs  framebuffer.rs  image.rs  layout.rs  parser.rs  rasterizer.rs
src/apps/WindowExample/: Cargo.toml  about.toml
src/apps/test_app/: Cargo.toml  build.rs  build.sh
src/apps/tests/: Cargo.toml  README.md  build.rs
src/boot/: booting_gif.rs  loader.rs  vga_console.rs
src/components/: window.html
src/core/: Cargo.toml  cpu.rs  entry.rs  error.rs  kernel.ld  kernel.rs  lib.rs  panic.rs  percpu.rs  result.rs
src/core/capability/: mod.rs
src/core/driver/: ps2_keyboard.rs
src/core/elf/: loader.rs
src/core/init/: fs.rs  mod.rs
src/core/interrupt/: idt.rs  mod.rs  pic.rs  spinlock.rs  syscall.rs  timer.rs
src/core/kmod/: disk.rs  fs.rs  mod.rs  registry.rs
src/core/mem/: allocator.rs  frame.rs  gdt.rs  mod.rs  paging.rs  tss.rs  user.rs
src/core/syscall/: block.rs  capability.rs  console.rs  exec.rs  fs.rs  io.rs  io_port.rs  ipc.rs  keyboard.rs  linux.rs  mmio.rs  mod.rs  mouse.rs  pgroup.rs  pipe.rs  privileged.rs  process.rs  signal.rs  syscall_entry.rs  task.rs  time.rs  tty.rs  types.rs  vga.rs
src/core/task/: context.rs  elf.rs  fd_table.rs  mod.rs  process.rs  scheduler.rs  signal.rs  thread.rs  usermode.rs
src/core/util/: console.rs  fifo.rs  loading.rs  log.rs  mod.rs  ps2kbd.rs  ps2mouse.rs  vga.rs
src/drivers/net/: Cargo.toml
src/drivers/usb/: Cargo.toml  build.rs
src/drivers/usb/src/: define.rs  hid.rs  main.rs
src/drivers/usb3_0/: Cargo.toml
src/drivers/usb3_0/src/: main.rs
src/initfs/: test_app.elf
src/interrupt/: idt.rs  keyboard.rs  mod.rs  pic.rs  timer.rs
src/lib/: Cargo.toml  fs.rs  heap.rs  io.rs  lib.rs  process.rs  sys.rs  thread.rs  x86_64-swiftcore.json
src/lib/.cargo/: config.toml
src/libc-rs/: Cargo.toml  cargo.toml
src/libc-rs/src/: lib.rs
src/mem/: gdt.rs  mod.rs
src/modules/fs/: Cargo.toml
src/pipeline/: core.rs
src/posix/: Cargo.toml
src/resources/Config/: env.txt
src/resources/config/: capabilities.db
src/resources/system/: mochi
src/runtime_glue/: lib.rs  libc.rs  posix_stubs.rs  sys.rs
src/services/: build.rs  capabilities.toml  index.toml
src/services/capability.service/: Cargo.toml  manifest.toml
src/services/core/: Cargo.toml  build.rs
src/services/core.service/: build.rs  manifest.toml
src/services/device.service/: Cargo.toml  build.rs  manifest.toml
src/services/disk/: Cargo.toml  build.rs
src/services/disk.service/: Cargo.toml  build.rs  manifest.toml
src/services/driver/: Cargo.toml  build.rs
src/services/driver.service/: Cargo.toml  build.rs  manifest.toml
src/services/fs/: Cargo.toml  build.rs  build.sh  x86_64-swiftcore.json
src/services/fs.service/: Cargo.toml  manifest.toml
src/services/fs/.cargo/: config.toml
src/services/fs/src/: disk_device.rs  lib.rs  main.rs
src/services/fs/src/common/: mod.rs  vfs.rs
src/services/fs/src/ext2/: mod.rs
src/services/fs/src/initfs/: mod.rs
src/services/keyboard/: Cargo.toml
src/services/net.service/: Cargo.toml  build.rs  linker.ld  manifest.toml
src/services/process.service/: Cargo.toml  build.rs  manifest.toml
src/services/shell.service/: Cargo.toml  build.rs  manifest.toml
src/task/: ids.rs  mod.rs  process.rs  thread.rs
src/user/: Cargo.toml  block.rs  capability.rs  cfunc.rs  console.rs  crt.rs  fs.rs  fs_consts.rs  input.rs  io.rs  ipc.rs  keyboard.rs  lib.rs  libc.rs  linker.ld  mmio.rs  mouse.rs  newlib.rs  port.rs  posix_stubs.rs  privileged.rs  process.rs  stub.rs  sys.rs  task.rs  time.rs  user_space.rs
src/user/test_app/examples/: advanced.rs
src/user/test_app/src/: lib.rs  main.rs
src/util/: console.rs  fifo.rs  mod.rs  serial.rs  spinlock.rs  vga.rs
src/utils/: Cargo.toml  build.rs
src/utils/.cargo/: config.toml
src/utils/src/: cat.rs  ls.rs  pwd.rs
(+71 files in other folders)
