[package]
name = "SwiftCore"
version = "0.1.0"
edition = "2021"
authors = ["nekogakure <info@mail.nekogakure.jp>"]
default-run = "boot"
build = "build.rs"

[lib]
name = "swiftcore"
path = "src/core/lib.rs"
test = false
bench = false

[[bin]]
name = "boot"
path = "src/boot/loader.rs"
test = false
bench = false

[dependencies]
uefi = { version = "0.30", features = ["alloc", "logger"] }
spin = "0.9"
x86_64 = "0.15"

[workspace]
members = [
    "src/lib",
    "src/apps/test_app",
    "src/services/fs",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
