[package]
name = "mochi_syscall"
version = "0.1.0"
edition = "2021"

[dependencies]

[features]
default = ["library"]
library = []
std-support = []  # When used from std-based binaries; disables the custom panic_handler
hosted-vga = ["std-support"] # Linuxホスト上のソフトウェアフレームバッファ

[lib]
name = "mochi_syscall"
path = "lib.rs"
test = false
bench = false
