[package]
name = "kagami"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "wayland_compositor"
path = "src/lib.rs"

[[bin]]
name = "compositor"
path = "src/compositor/main.rs"
required-features = ["wayland-host"]

[[bin]]
name = "test-client"
path = "examples/test_client.rs"
required-features = ["wayland-host"]

[[example]]
name = "test_client"
path = "examples/test_client.rs"
required-features = ["wayland-host"]

[[bin]]
name = "kagamid"
path = "src/kagamid/main.rs"
required-features = ["mochios"]

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11.10", optional = true }
thiserror = { version = "2.0.18", optional = true }

[dev-dependencies]

[features]
default = ["wayland-host", "backend-linux-fb"]

wayland-host = ["dep:tokio", "dep:async-trait", "dep:log", "dep:env_logger", "dep:thiserror"]
mochios = []

backend-linux-fb = []       # Linux フレームバッファドライバ
backend-mochios-vga = ["mochios"] # mochiOS VGA/VRAM (swiftlib::vga) 向け
backend-mochios-vga-hosted = ["backend-mochios-vga", "swiftlib/hosted-vga"] # Linuxホストでswiftlib vgaを模擬
backend-generic-memory = [] # 汎用メモリバッファ
backend-custom = []         # カスタムバックエンド用（デフォルトパニック）

debug-logging = []
performance-metrics = []

[build-dependencies]

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
swiftlib = { path = "../../user", features = ["std-support"] }
