[package]
name = "viewkit"
description = "A UI kit for mochiOS / Kagami"
keywords = ["uikit", "mochios", "viewkit", "ui", "kagami"]
categories = ["gui"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
autoexamples = false

[dependencies]
wayland-client = { version = "0.31.14", features = ["dlopen"] }
wayland-protocols = { version = "0.32", features = ["client"] }
memmap2 = "0.9.10"
tempfile = "3.6"
ui_layout = "0.9.8"
fontdue = "0.9.3"
html5ever = "0.39.0"
lightningcss = "1.0.0-alpha.71"
tiny-skia = "0.12.0"
image = "0.25.10"
serde_json = "1.0"
smithay-client-toolkit = { version = "0.20.0", optional = true }
viewkit_macros = { path = "macros" }

[lib]
name = "viewkit"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "components_demo"
path = "examples/demo.rs"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[features]
wayland = ["smithay-client-toolkit"]

