[package]
name = "fs_service"
version = "0.1.0"
edition = "2021"

[lib]
name = "fs_service"
path = "src/lib.rs"
crate-type = ["rlib"]
test = false
bench = false

[[bin]]
name = "fs_service"
path = "src/main.rs"
test = false
bench = false

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

